<resources>
    <string name="app_name">I am a historian</string>
    <string name="start">Начать</string>
    <string name="heading">Я историк</string>
    <string name="exit">Выход</string>
    <string name="test_title">Тест - я историк</string>
    <string name="first_answer_default">Первый ответ</string>
    <string name="second_answer_default">Второй ответ</string>
    <string name="third_answer_default">Третий ответ</string>
    <string name="question_default">Вопрос</string>
    <string name="Number_of_points">Количество баллов:</string>
    <string name="characteristic_default">Характеристика</string>
    <string name="excellent">отличный</string>
    <string name="good">хороший</string>
    <string name="satisfactory">удовлетворительный</string>
    <string name="not_satisfactory">неудовлетворительный</string>
    <string name="bad">плохой</string>
    <string name="question_1">Когда состоялась Великое княжество Владимирское, которое считается началом российской государственности?</string>
    <string name="answer_1_1">862 год</string>
    <string name="answer_1_2">988 год</string>
    <string name="answer_1_3">1240 год</string>
    <string name="question_2">Кто из русских царей провел реформы, известные как "Петровские реформы"?</string>
    <string name="answer_2_1">Николай I</string>
    <string name="answer_2_2">Иван IV</string>
    <string name="answer_2_3">Петр I</string>
    <string name="question_3">Когда был подписан Брест-Литовский мир, завершивший участие России в Первой мировой войне?</string>
    <string name="answer_3_1">1917 год</string>
    <string name="answer_3_2">1918 год</string>
    <string name="answer_3_3">1919 год</string>
    <string name="question_4">Кто из перечисленных был императором России во время Первой мировой войны?</string>
    <string name="answer_4_1">Николай II</string>
    <string name="answer_4_2">Александр III</string>
    <string name="answer_4_3">Павел I</string>
    <string name="question_5">Какой военно-морской порт был основан Петром I на Балтийском море?</string>
    <string name="answer_5_1">Владивосток</string>
    <string name="answer_5_2">Кронштадт</string>
    <string name="answer_5_3">Ростов-на-Дону</string>
</resources>