<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/activity_testTB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        tools:ignore="MissingConstraints"
        app:title="@string/test_title"/>

    <RadioGroup
        android:id="@+id/testRG"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/activity_testTB"
        android:padding="16dp">

        <TextView
            android:id="@+id/questionTV"
            android:text="@string/question_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:padding="10dp"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_answer_default"
            android:textSize="24sp"
            />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_answer_default"
            android:textSize="24sp"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_answer_default"
            android:textSize="24sp"
            />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>