<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/number_of_pointsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Number_of_points"
        android:textSize="26sp"
        tools:ignore="MissingConstraints"
        android:padding="10dp"/>

    <ScrollView
        android:id="@+id/characteristicSV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/number_of_pointsTV"
        app:layout_constraintBottom_toTopOf="@id/exitBTN"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/characteristicTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/characteristic_default"
            android:textSize="26sp"
            tools:ignore="MissingConstraints"
            app:layout_constraintTop_toBottomOf="@id/number_of_pointsTV"/>
    </ScrollView>


    <Button
        android:id="@+id/exitBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>